ec2/main.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_instance" "ec2" {
    ami = "ami-07ff62358b87c7116"
    instance_type = "t2.micro"
}

#terraform init
#terraform apply
